# usb-sniffify

./: .gitignore  CMakeLists.txt
examples/: CMakeLists.txt  hid.c  libusbhax.c  passthrough.c  passthrough.cpp
include/: raw-gadget.hpp  raw-helper.h
src/: raw-gadget-passthrough.cpp  raw-gadget.cpp  raw-helper.c  raw-helper.cpp
